Routes Prepared - 1st

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -33,7 +33,7 @@
       <ul>
         <li><a href="login.html">Login</a></li>
         <li><a href="register.html">Register</a></li>
-        <li><a href="wishlist.html">Footer</a></li>
+        <li><a href="wishlist.html">Cart</a></li>
 
       </ul>
     </div>
