--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,11 +7,11 @@
     </div>
     <div class="head-t">
       <ul class="card">
-        <li><a href="wishlist.html" ><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a></li>
-        <li><a href="login.html" ><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-        <li><a href="register.html" ><i class="fa fa-arrow-right" aria-hidden="true"></i>Register</a></li>
-        <li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
-        <li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>
+        <li><a [routerLink]="['cart']"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a></li>
+        <li><a [routerLink]="['login']"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
+        <li><a [routerLink]="['register']"><i class="fa fa-arrow-right" aria-hidden="true"></i>Register</a></li>
+        <li><a [routerLink]="['codes']"><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
+        <li><a [routerLink]="['shipping']"><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>
       </ul>
     </div>
 
@@ -196,4 +196,3 @@
     </div>
   </div>
 </div>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.1.min.js"><\/script>')</script>
