--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -23,7 +23,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal1" class="offer-img">
-										<img src="images/of.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -48,7 +48,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal2" class="offer-img">
-										<img src="images/of1.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of1.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -72,7 +72,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal3" class="offer-img">
-										<img src="images/of2.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of2.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -125,7 +125,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal5" class="offer-img">
-										<img src="images/of4.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of4.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -149,7 +149,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal6" class="offer-img">
-										<img src="images/of5.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of5.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -173,7 +173,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal7" class="offer-img">
-										<img src="images/of6.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of6.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -197,7 +197,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal8" class="offer-img">
-										<img src="images/of7.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of7.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -226,7 +226,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal9" class="offer-img">
-										<img src="images/of8.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of8.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -250,7 +250,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal10" class="offer-img">
-										<img src="images/of9.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of9.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -435,7 +435,7 @@
     <div class="col-md-4 m-w3ls">
       <div class="col-md1 ">
         <a href="kitchen.html">
-					<img src="images/co1.jpg" class="img-responsive img" alt="">
+					<img src="../../assets/images/co1.jpg" class="img-responsive img" alt="">
 					<div class="big-sa">
 						<h6>New Collections</h6>
 						<h3>Season<span>ing </span></h3>
@@ -447,7 +447,7 @@
     <div class="col-md-4 m-w3ls1">
       <div class="col-md ">
         <a href="hold.html">
-					<img src="images/co.jpg" class="img-responsive img" alt="">
+					<img src="../../assets/images/co.jpg" class="img-responsive img" alt="">
 					<div class="big-sale">
 						<div class="big-sale1">
 							<h3>Big <span>Sale</span></h3>
@@ -460,7 +460,7 @@
     <div class="col-md-4 m-w3ls">
       <div class="col-md2 ">
         <a href="kitchen.html">
-					<img src="images/co2.jpg" class="img-responsive img1" alt="">
+					<img src="../../assets/images/co2.jpg" class="img-responsive img1" alt="">
 					<div class="big-sale2">
 						<h3>Cooking <span>Oil</span></h3>
 						<p>It is a long established fact that a reader </p>		
@@ -469,7 +469,7 @@
       </div>
       <div class="col-md3 ">
         <a href="hold.html">
-					<img src="images/co3.jpg" class="img-responsive img1" alt="">
+					<img src="../../assets/images/co3.jpg" class="img-responsive img1" alt="">
 					<div class="big-sale3">
 						<h3>Vegeta<span>bles</span></h3>
 						<p>It is a long established fact that a reader </p>
@@ -492,15 +492,15 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <a href="kitchen.html"> <img class="first-slide" src="images/ba.jpg" alt="First slide"></a>
+      <a href="kitchen.html"> <img class="first-slide" src="../../assets/images/ba.jpg" alt="First slide"></a>
 
     </div>
     <div class="item">
-      <a href="care.html"> <img class="second-slide " src="images/ba1.jpg" alt="Second slide"></a>
+      <a href="care.html"> <img class="second-slide " src="../../assets/images/ba1.jpg" alt="Second slide"></a>
 
     </div>
     <div class="item">
-      <a href="hold.html"><img class="third-slide " src="images/ba2.jpg" alt="Third slide"></a>
+      <a href="hold.html"><img class="third-slide " src="../../assets/images/ba2.jpg" alt="Third slide"></a>
 
     </div>
   </div>
@@ -523,7 +523,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal17" class="offer-img">
-										<img src="images/of16.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of16.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -718,7 +718,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
