--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="container">
 
     <div class="logo">
-      <h1 ><a href="index.html"><b>T<br>H<br>E</b>Tec Store<span>The Best Supermarket</span></a></h1>
+      <h1><a [routerLink]="['']"><b>T<br>H<br>E</b>Tec Store<span>The Best Supermarket</span></a></h1>
     </div>
     <div class="head-t">
       <ul class="card">
@@ -43,7 +43,7 @@
             <li class=" active"><a href="index.html" class="hyper "><span>Home</span></a></li>
 
             <li class="dropdown ">
-              <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Kitchen<b class="caret"></b></span></a>
+              <a href="#" class="dropdown-toggle  hyper" data-toggle="dropdown"><span>Kitchen<b class="caret"></b></span></a>
               <ul class="dropdown-menu multi">
                 <div class="row">
                   <div class="col-sm-3">
@@ -88,7 +88,7 @@
             </li>
             <li class="dropdown">
 
-              <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown" ><span> Personal Care <b class="caret"></b></span></a>
+              <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown"><span> Personal Care <b class="caret"></b></span></a>
               <ul class="dropdown-menu multi multi1">
                 <div class="row">
                   <div class="col-sm-3">
@@ -130,7 +130,7 @@
               </ul>
             </li>
             <li class="dropdown">
-              <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown" ><span>Household<b class="caret"></b></span></a>
+              <a href="#" class="dropdown-toggle hyper" data-toggle="dropdown"><span>Household<b class="caret"></b></span></a>
               <ul class="dropdown-menu multi multi2">
                 <div class="row">
                   <div class="col-sm-3">
@@ -179,20 +179,13 @@
       </nav>
       <div class="clearfix"></div>
     </div>
-
   </div>
 </div>
-<div data-vide-bg="../../../assets/video/video">
-  <div class="container">
-    <div class="banner-info">
-      <h3>It is a long established fact that a reader will be distracted by
-        the readable </h3>
-      <div class="search-form">
-        <form action="#" method="post">
-          <input type="text" placeholder="Search..." name="Search...">
-          <input type="submit" value=" " >
-        </form>
-      </div>
-    </div>
+<div id="search-form-container">
+  <div class="search-form" style="padding-top: 10px">
+    <form action="#" method="post">
+      <input type="text" placeholder="Search..." name="Search...">
+      <input type="submit" value=" " >
+    </form>
   </div>
 </div>
