--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -96,7 +96,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal4" class="offer-img">
-										<img src="images/of3.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of3.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -274,7 +274,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal11" class="offer-img">
-										<img src="images/of10.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of10.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -298,7 +298,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal12" class="offer-img">
-										<img src="images/of11.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of11.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -327,7 +327,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal13" class="offer-img">
-										<img src="images/of12.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of12.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -351,7 +351,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m ">
                 <a href="#" data-toggle="modal" data-target="#myModal14" class="offer-img">
-										<img src="images/of13.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of13.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -375,7 +375,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m ">
                 <a href="#" data-toggle="modal" data-target="#myModal15" class="offer-img">
-										<img src="images/of14.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of14.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -399,7 +399,7 @@
             <div class="col-md-3 m-wthree">
               <div class="col-m">
                 <a href="#" data-toggle="modal" data-target="#myModal16" class="offer-img">
-										<img src="images/of15.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of15.png" class="img-responsive" alt="">
 										<div class="offer"><p><span>Offer</span></p></div>
 									</a>
                 <div class="mid-1">
@@ -546,7 +546,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal18" class="offer-img">
-										<img src="images/of17.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of17.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -569,7 +569,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal19" class="offer-img">
-										<img src="images/of18.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of18.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -592,7 +592,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal20" class="offer-img">
-										<img src="images/of19.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of19.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -616,7 +616,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal21" class="offer-img">
-										<img src="images/of20.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of20.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -639,7 +639,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal22" class="offer-img">
-										<img src="images/of21.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of21.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -662,7 +662,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal23" class="offer-img">
-										<img src="images/of22.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of22.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -685,7 +685,7 @@
       <div class="col-md-3 pro-1">
         <div class="col-m">
           <a href="#" data-toggle="modal" data-target="#myModal24" class="offer-img">
-										<img src="images/of23.png" class="img-responsive" alt="">
+										<img src="../../assets/images/of23.png" class="img-responsive" alt="">
 									</a>
           <div class="mid-1">
             <div class="women">
@@ -750,7 +750,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of1.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of1.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -782,7 +782,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of2.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of2.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -814,7 +814,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of3.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of3.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -846,7 +846,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of4.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of4.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -878,7 +878,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of5.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of5.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -910,7 +910,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of6.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of6.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -942,7 +942,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of7.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of7.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -974,7 +974,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of8.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of8.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1006,7 +1006,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of9.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of9.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1038,7 +1038,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of10.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of10.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1070,7 +1070,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of11.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of11.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1102,7 +1102,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of12.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of12.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1134,7 +1134,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of13.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of13.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1166,7 +1166,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of14.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of14.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1198,7 +1198,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of15.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of15.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1230,7 +1230,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of16.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of16.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1262,7 +1262,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of17.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of17.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1294,7 +1294,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of18.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of18.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1326,7 +1326,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of19.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of19.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1358,7 +1358,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of20.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of20.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1390,7 +1390,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of21.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of21.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1422,7 +1422,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of22.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of22.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
@@ -1454,7 +1454,7 @@
       <div class="modal-body modal-spa">
           <div class="col-md-5 span-2">
                 <div class="item">
-                  <img src="images/of23.png" class="img-responsive" alt="">
+                  <img src="../../assets/images/of23.png" class="img-responsive" alt="">
                 </div>
           </div>
           <div class="col-md-7 span-1 ">
