--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,7 +1,7 @@
 <div class="check-out">
   <div class="container">
     <div class="spec ">
-      <h3>Wishlist</h3>
+      <h3>My Cart</h3>
       <div class="ser-t">
         <b></b>
         <span><i></i></span>
@@ -106,6 +106,26 @@
         </td>
         <td class="t-data"><a class=" add-1" href="single.html">Add To Cart</a></td>
       </tr>
+      <tr class="cross2">
+          <td class="t-data ring-in"><a href="single.html" class="at-in"><img src="images/wi2.png" class="img-responsive" alt=""></a>
+            <div class="sed">
+              <h5>Sed ut perspiciatis unde</h5>
+            </div>
+            <div class="clearfix"> </div>
+            <div class="close3"> <i class="fa fa-times" aria-hidden="true"></i></div>
+          </td>
+          <td class="t-data">$15.00</td>
+          <td class="t-data">
+            <div class="quantity">
+              <div class="quantity-select">
+                <div class="entry value-minus">&nbsp;</div>
+                <div class="entry value"><span class="span-1">1</span></div>
+                <div class="entry value-plus active">&nbsp;</div>
+              </div>
+            </div>
+          </td>
+          <td class="t-data"><a class=" add-1" href="single.html">Add To Cart</a></td>
+        </tr>
     </table>
   </div>
 </div>
@@ -119,4 +139,5 @@
         var divUpd = $(this).parent().find('.value'), newVal = parseInt(divUpd.text(), 10) - 1;
         if (newVal >= 1) divUpd.text(newVal);
       });
+
 </script>
