--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+#myLoader {
+  margin-left: 40%;
+  border: 20px solid rgb(250, 176, 5);
+  border-top: 20px solid rgb(237, 6, 18);
+  border-radius: 50%;
+  width: 10%;
+  height: inherit;
+  animation: myLoaderSpin 1.5s linear infinite;
+}
+
+@keyframes myLoaderSpin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
