More Improvised Barrels

--- a/src/app/components/pages/care/care.component.html
+++ b/src/app/components/pages/care/care.component.html
@@ -1,35 +1,32 @@
-<!-- Carousel here -->
+<tts-slider></tts-slider>
 <div class="kic-top ">
   <div class="container ">
     <div class="kic ">
       <h3>Popular Categories</h3>
-
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-    <img src="images/ki.jpg" class="img-responsive" alt="">
-  </a>
-      <h6>Dal</h6>
+				<img src="../../assets/images/ki3.jpg" class="img-responsive" alt="">
+			</a>
+      <h6>Natural Cream</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-    <img src="images/ki1.jpg" class="img-responsive" alt="">
-  </a>
-      <h6>Snacks</h6>
+				<img src="../../assets/images/ki4.jpg" class="img-responsive" alt="">
+			</a>
+      <h6>Shaving Kit</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-    <img src="images/ki2.jpg" class="img-responsive" alt="">
-  </a>
-      <h6>Spice</h6>
+				<img src="../../assets/images/ki5.jpg" class="img-responsive" alt="">
+			</a>
+      <h6>Makeup Kit</h6>
       <p>Nam libero tempore</p>
     </div>
   </div>
 </div>
-
-<!--content-->
 <div class="product">
   <div class="container">
     <div class="spec ">
@@ -41,9 +38,9 @@
       </div>
     </div>
     <div class=" con-w3l agileinf">
-      
-      <!-- Products Listed here -->
-      
+
+      <!-- Products to be listed here -->
+
       <div class="clearfix"></div>
     </div>
   </div>
