--- a/src/app/components/pages/kitchen/kitchen.component.html
+++ b/src/app/components/pages/kitchen/kitchen.component.html
@@ -1,3 +1,4 @@
+<tts-slider></tts-slider>
 <div class="kic-top ">
   <div class="container ">
     <div class="kic ">
@@ -6,23 +7,23 @@
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="images/ki6.jpg" class="img-responsive" alt="">
-			</a>
-      <h6>Clips</h6>
+    <img src="images/ki.jpg" class="img-responsive" alt="">
+  </a>
+      <h6>Dal</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="images/ki7.jpg" class="img-responsive" alt="">
-			</a>
-      <h6>Cleaning Wear</h6>
+    <img src="images/ki1.jpg" class="img-responsive" alt="">
+  </a>
+      <h6>Snacks</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="images/ki8.jpg" class="img-responsive" alt="">
-			</a>
-      <h6>Toothbrush</h6>
+    <img src="images/ki2.jpg" class="img-responsive" alt="">
+  </a>
+      <h6>Spice</h6>
       <p>Nam libero tempore</p>
     </div>
   </div>
@@ -40,9 +41,9 @@
       </div>
     </div>
     <div class=" con-w3l agileinf">
-
-      <!-- Products to be listed here -->
-
+      
+      <!-- Products Listed here -->
+      
       <div class="clearfix"></div>
     </div>
   </div>
