--- a/src/app/components/pages/hold/hold.component.html
+++ b/src/app/components/pages/hold/hold.component.html
@@ -1,32 +1,35 @@
-<!-- Carousel Here -->
+<tts-slider></tts-slider>
 <div class="kic-top ">
   <div class="container ">
     <div class="kic ">
       <h3>Popular Categories</h3>
+
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="../../assets/images/ki3.jpg" class="img-responsive" alt="">
+				<img src="images/ki6.jpg" class="img-responsive" alt="">
 			</a>
-      <h6>Natural Cream</h6>
+      <h6>Clips</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="../../assets/images/ki4.jpg" class="img-responsive" alt="">
+				<img src="images/ki7.jpg" class="img-responsive" alt="">
 			</a>
-      <h6>Shaving Kit</h6>
+      <h6>Cleaning Wear</h6>
       <p>Nam libero tempore</p>
     </div>
     <div class="col-md-4 kic-top1">
       <a href="single.html">
-				<img src="../../assets/images/ki5.jpg" class="img-responsive" alt="">
+				<img src="images/ki8.jpg" class="img-responsive" alt="">
 			</a>
-      <h6>Makeup Kit</h6>
+      <h6>Toothbrush</h6>
       <p>Nam libero tempore</p>
     </div>
   </div>
 </div>
+
+<!--content-->
 <div class="product">
   <div class="container">
     <div class="spec ">
