Small CSS and Template Tweaks

--- a/src/app/components/standalone/footer/footer.component.html
+++ b/src/app/components/standalone/footer/footer.component.html
@@ -44,8 +44,8 @@
       <ul class="social-fo">
         <li><a href="https://fb.com" target="_blank" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
         <li><a href="https://twitter.com" target="_blank" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-        <li><a href="https://pinterest.com" target="_blank" class=" pin"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-        <li><a href="https://dribble.com" target="_blank" class=" dri"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+        <li><a href="https://pinterest.com" target="_blank" class=" pin"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+        <li><a href="https://dribble.com" target="_blank" class=" dri"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
       </ul>
       <div class=" address">
         <div class="col-md-4 fo-grid1">
