--- a/src/app/components/standalone/header/header.component.html
+++ b/src/app/components/standalone/header/header.component.html
@@ -5,19 +5,19 @@
     </div>
     <div class="head-t">
       <ul class="card">
-        <li><a [routerLink]="['cart']"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a></li>
-        <li><a [routerLink]="['login']"><i class="fa fa-user" aria-hidden="true"></i>Login</a></li>
-        <li><a [routerLink]="['register']"><i class="fa fa-arrow-right" aria-hidden="true"></i>Register</a></li>
-        <li><a [routerLink]="['orders']"><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
-        <li><a [routerLink]="['shipping']"><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>
+        <li><a [routerLink]="['cart']"><i class="fa fa-shopping-cart"></i>Cart</a></li>
+        <li><a [routerLink]="['login']"><i class="fa fa-user"></i>Login</a></li>
+        <li><a [routerLink]="['register']"><i class="fa fa-arrow-right"></i>Register</a></li>
+        <li><a [routerLink]="['orders']"><i class="fa fa-file-text-o"></i>Order History</a></li>
+        <li><a [routerLink]="['shipping']"><i class="fa fa-ship"></i>Shipping</a></li>
       </ul>
     </div>
     <div class="header-ri">
       <ul class="social-top">
-        <li><a href="https://fb.com" target="_blank" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
-        <li><a href="https://twitter.com" target="_blank" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
-        <li><a href="https://pinterest.com" target="_blank" class="icon pinterest"><i class="fa fa-linkedin" aria-hidden="true"></i><span></span></a></li>
-        <li><a href="https://dribble.com" target="_blank" class="icon dribbble"><i class="fa fa-github" aria-hidden="true"></i><span></span></a></li>
+        <li><a href="https://fb.com" target="_blank" class="icon facebook"><i class="fa fa-facebook"></i><span></span></a></li>
+        <li><a href="https://twitter.com" target="_blank" class="icon twitter"><i class="fa fa-twitter"></i><span></span></a></li>
+        <li><a href="https://pinterest.com" target="_blank" class="icon pinterest"><i class="fa fa-instagram"></i><span></span></a></li>
+        <li><a href="https://dribble.com" target="_blank" class="icon dribbble"><i class="fa fa-linkedin"></i><span></span></a></li>
       </ul>
     </div>
     <div class="nav-top">
@@ -31,10 +31,10 @@
           </button>
         </div>
         <div class="navbar-collapse" [ngClass]="{collapse: isCollapsed}" id="bs-megadropdown-tabs">
-          <ul class="nav navbar-nav ">
-            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['']" class="hyper "><span>Home</span></a></li>
-            <li class="dropdown " routerLinkActive="active" ttsDropdown>
-              <a [routerLink]="['kitchen']"  class="dropdown-toggle  hyper" data-toggle="dropdown" ><span>Kitchen<b class="caret"></b></span></a>
+          <ul class="nav navbar-nav">
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['']" class="hyper"><span>Home</span></a></li>
+            <li class="dropdown" routerLinkActive="active" ttsDropdown>
+              <a [routerLink]="['kitchen']"  class="dropdown-toggle hyper"><span>Kitchen<b class="caret"></b></span></a>
               <ul class="dropdown-menu multi">
                 <div class="row">
                   <div class="col-sm-3">
@@ -70,7 +70,7 @@
               </ul>
             </li>
             <li class="dropdown " routerLinkActive="active" ttsDropdown>
-              <a [routerLink]="['care']" class="dropdown-toggle hyper" data-toggle="dropdown"><span> Personal Care <b class="caret"></b></span></a>
+              <a [routerLink]="['care']" class="dropdown-toggle hyper"><span> Personal Care <b class="caret"></b></span></a>
               <ul class="dropdown-menu multi multi1">
                 <div class="row">
                   <div class="col-sm-3">
@@ -105,7 +105,7 @@
               </ul>
             </li>
             <li class="dropdown" routerLinkActive="active" ttsDropdown>
-              <a [routerLink]="['hold']"  class="dropdown-toggle hyper" data-toggle="dropdown"><span>Household<b class="caret"></b></span></a>
+              <a [routerLink]="['hold']"  class="dropdown-toggle hyper"><span>Household<b class="caret"></b></span></a>
               <ul class="dropdown-menu multi multi2">
                 <div class="row">
                   <div class="col-sm-3">
@@ -139,8 +139,8 @@
                 </div>
               </ul>
             </li>
-            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['codes']"  class="hyper"><span>Codes</span></a></li>
-            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['contact']"  class="hyper"><span>Contact Us</span></a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['codes']" class="hyper"><span>Codes</span></a></li>
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a [routerLink]="['contact']" class="hyper"><span>Contact Us</span></a></li>
           </ul>
         </div>
       </nav>
@@ -150,7 +150,7 @@
 </div>
 <div id="search-form-container">
   <div class="search-form" style="padding-top: 10px">
-    <form action="#" method="post">
+    <form>
       <input type="text" placeholder="Search..." name="Search...">
       <input type="submit" value=" " >
     </form>
