--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="forg">
       <a href="#" class="forg-left">Forgot Password</a>
-      <a href="register.html" class="forg-right">Register</a>
+      <a [routerLink]="['register']" class="forg-right">Register</a>
     <div class="clearfix"></div>
     </div>
   </div>
