Modified Project Structuring and Standalone Components Template

--- a/src/app/components/standalone/footer/footer.component.html
+++ b/src/app/components/standalone/footer/footer.component.html
@@ -9,37 +9,37 @@
     <div class="col-md-3 footer-grid ">
       <h3>Menu</h3>
       <ul>
-        <li><a [routerLink]="['']">Home</a></li>
-        <li><a [routerLink]="['kitchen']">Kitchen</a></li>
-        <li><a [routerLink]="['care']">Personal Care</a></li>
-        <li><a [routerLink]="['hold']">Household</a></li>
-        <li><a [routerLink]="['codes']">Short Codes</a></li>
-        <li><a [routerLink]="['contact']">Contact</a></li>
+        <li><a [routerLink]="['/']">Home</a></li>
+        <li><a [routerLink]="['/kitchen']">Kitchen</a></li>
+        <li><a [routerLink]="['/care']">Personal Care</a></li>
+        <li><a [routerLink]="['/hold']">Household</a></li>
+        <li><a [routerLink]="['/codes']">Short Codes</a></li>
+        <li><a [routerLink]="['/contact']">Contact</a></li>
       </ul>
     </div>
     <div class="col-md-3 footer-grid ">
       <h3>Customer Services</h3>
       <ul>
-        <li><a [routerLink]="['shipping']">Shipping</a></li>
-        <li><a [routerLink]="['terms']">Terms & Conditions</a></li>
-        <li><a [routerLink]="['faqs']">Faqs</a></li>
-        <li><a [routerLink]="['contact']">Contact</a></li>
-        <li><a [routerLink]="['offer']">Online Shopping</a></li>
+        <li><a [routerLink]="['/shipping']">Shipping</a></li>
+        <li><a [routerLink]="['/terms']">Terms & Conditions</a></li>
+        <li><a [routerLink]="['/faqs']">Faqs</a></li>
+        <li><a [routerLink]="['/contact']">Contact</a></li>
+        <li><a [routerLink]="['/offer']">Online Shopping</a></li>
 
       </ul>
     </div>
     <div class="col-md-3 footer-grid">
       <h3>My Account</h3>
       <ul>
-        <li><a [routerLink]="['login']">Login</a></li>
-        <li><a [routerLink]="['register']">Register</a></li>
-        <li><a [routerLink]="['cart']">Cart</a></li>
+        <li><a [routerLink]="['/login']">Login</a></li>
+        <li><a [routerLink]="['/register']">Register</a></li>
+        <li><a [routerLink]="['/cart']">Cart</a></li>
 
       </ul>
     </div>
     <div class="clearfix"></div>
     <div class="footer-bottom">
-      <h2 ><a [routerLink]="['']"><b>T<br>H<br>E</b>Tec Store<span>The Best Supermarket</span></a></h2>
+      <h2 ><a [routerLink]="['/']"><b>T<br>H<br>E</b>Tec store<span>The Best COMPUTERS</span></a></h2>
       <p class="fo-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris</p>
       <ul class="social-fo">
         <li><a href="https://fb.com" target="_blank" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="copy-right">
-      <p> &copy; 2016 The Tec Store. All Rights Reserved | Developed by  <a href="https://fb.com/naumanazeema" target="_blank"> N.A-Square</a></p>
+      <p> &copy; 2017 The Tec Store. All Rights Reserved | Developed by  <a href="https://fb.com/naumanazeema" target="_blank"> N.A-Square</a></p>
     </div>
   </div>
 </div>
