--- a/src/app/components/standalone/product/product.component.html
+++ b/src/app/components/standalone/product/product.component.html
@@ -1,7 +1,8 @@
 <div class="col-md-3 pro-1">
   <div class="col-m">
-    <a href="#" data-toggle="modal" data-target="#myModal1" class="offer-img">
+    <a href="#" class="offer-img">
       <img src="../../assets/images/of.png" class="img-responsive" alt="">
+      <div class="offer"><p><span>Offer</span></p></div>
     </a>
     <div class="mid-1">
       <div class="women">
@@ -12,8 +13,7 @@
         <div class="clearfix"></div>
       </div>
       <div class="add add-2">
-        <button class="btn btn-danger my-cart-btn my-cart-b" data-id="1" data-name="product 1" data-summary="summary 1" data-price="6.00"
-          data-quantity="1" data-image="images/of16.png">Add to Cart</button>
+        <button class="btn btn-danger my-cart-btn my-cart-b">Add to Cart</button>
       </div>
     </div>
   </div>
